# Bavel

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  controlSchema.txt  todo.txt
src/: DirectoryReader.cpp  ElementLogic.cpp  Header.hpp  ListItem.cpp  ProcessingFuncs.cpp  QNavManager.cpp  main.cpp
